<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/greetingCardView"
            android:layout_width="200dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_evening"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vince"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/menuIcon"
            android:layout_below="@+id/greetingCardView"
            android:layout_width="50dp"
            android:layout_marginStart="10dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/menu_icon"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cart"
            android:layout_width="40dp"
            android:layout_marginStart="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/cart"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePhoto"
            android:layout_width="40dp"
            android:layout_marginStart="310dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/person"/>

        <TextView
            android:id="@+id/jahariAficaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jahari"
            android:layout_below="@+id/greetingCardView"
            android:layout_marginStart="212dp"
            android:layout_marginTop="10dp"
            android:textSize="23sp"
            android:textColor="@color/green"
            android:fontFamily="@font/alba2"/>
        <TextView
            android:id="@+id/jahariAficaText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Africa"
            android:layout_below="@+id/greetingCardView"
            android:layout_marginStart="282dp"
            android:layout_marginTop="10dp"
            android:textSize="23sp"
            android:textColor="@color/yellow2"
            android:fontFamily="@font/alba2"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/discountCardView"
            app:cardBackgroundColor="@color/green"
            android:layout_width="389dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jahariAficaText"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/discountTextView"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/get_20_discount_on_the_first_order_from_the_app"
                    android:textStyle="bold"
                    android:layout_margin="15dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    />
                <ImageView
                    android:layout_width="145dp"
                    android:layout_height="100dp"
                    android:src="@drawable/vegetable_basket"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/categoriesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:layout_below="@+id/discountCardView"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <HorizontalScrollView
            android:id="@+id/categoriesScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categoriesText">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/broccoli"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/vegetables"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="15dp"
                    android:layout_margin="8dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/cherry"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fruits"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/beverage"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/beverages"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="15dp"
                    android:layout_margin="8dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/cinnamon"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/spices"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/popularProductsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categoriesScrollView"
            android:text="@string/popular_products"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/popularProductsText"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:layout_margin="18dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:src="@drawable/potatoes"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/potatoes"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    app:cardCornerRadius="15dp"
                    android:layout_margin="18dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:src="@drawable/carrot_display"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Carrots"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:layout_margin="18dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:src="@drawable/tomatoes"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tomatoes"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    app:cardCornerRadius="15dp"
                    android:layout_margin="18dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:src="@drawable/onions"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/onions"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</ScrollView>